[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameOver.gd" type="Script" id=1]
[ext_resource path="res://Score.tscn" type="PackedScene" id=2]
[ext_resource path="res://Score.gd" type="Script" id=3]

[node name="GameOver" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 594.44
margin_top = 307.76
margin_right = 714.44
margin_bottom = 307.76

[node name="score" parent="HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_bottom = 0.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 623.0
margin_top = 350.0
margin_right = 743.0
margin_bottom = 418.0

[node name="jogar_novamente" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_right = 120.0
margin_bottom = 20.0
text = "Jogar Novamente"

[node name="menu_principal" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_top = 24.0
margin_right = 120.0
margin_bottom = 44.0
text = "Menu Principal"

[node name="quit" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_top = 48.0
margin_right = 120.0
margin_bottom = 68.0
text = "Sair"
[connection signal="pressed" from="VBoxContainer/jogar_novamente" to="." method="_on_jogar_novamente_pressed"]
[connection signal="pressed" from="VBoxContainer/menu_principal" to="." method="_on_menu_principal_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
